# ecommerce-django-react

./: README.md  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py
backend/base/: admin.py  models.py  serializers.py
backend/base/migrations/: 0001_initial.py
backend/base/urls/: order_urls.py  product_urls.py
backend/base/views/: order_views.py  product_views.py  user_views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
